Everything is up to date except for JS part

--- a/answer.html
+++ b/answer.html
@@ -4,11 +4,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Answer|#100Devs Push Project 1</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>1Answer|#100Devs Push Project 1</title>
 </head>
 
 <body>
-    <h1>New branch called 'answer'</h1>
+    <section>
+        <div>
+            <h1>Simple Calculator Using OOP Best Practices</h1>
+            <section class="container">
+                <div class="calc-body">
+                    <div class="display">
+                        <div class="display-only">
+                            <h2 id="beep"></h2>
+                        </div>
+
+                        <section class="button-body">
+                            <div>
+                                <div>
+                                    <p class="number" id="seven">7</p>
+                                </div>
+                                <div>
+                                    <p class="number" id="four">4</p>
+                                </div>
+                                <div>
+                                    <p class="number" id="one">1</p>
+                                </div>
+                                <div>
+                                    <p class="number" id="zero">0</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div>
+                                    <p class="number" id="eight">8</p>
+                                </div>
+                                <div>
+                                    <p class="number" id="five">5</p>
+                                </div>
+                                <div>
+                                    <p class="number" id="two">2</p>
+                                </div>
+                                <div>
+                                    <p class="number" id="dot">.</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div>
+                                    <p class="number" id="nine">9</p>
+                                </div>
+                                <div>
+                                    <p class="number" id="six">6</p>
+                                </div>
+                                <div>
+                                    <p class="number" id="three">3</p>
+                                </div>
+                                <div>
+                                    <p class="equal-sign">=</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div>
+                                    <p class="operator">/</p>
+                                </div>
+                                <div>
+                                    <p class="operator">*</p>
+                                </div>
+                                <div>
+                                    <p class="operator">+</p>
+                                </div>
+                                <div>
+                                    <p class="operator">-</p>
+                                </div>
+                            </div>
+                        </section>
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+    </section>
+
+
+
+    <script src="js/app.js"></script>
 </body>
 
 </html>
